# seqtools

./: .gitignore  LICENCE  align.c  alignmenttool.c  asn.c  belvu.c  bigpicture.c  bigpicture.h  bigpicturegrid.c  bigpicturegrid.h  blixem_.h  blxFetch.c  blxGff3Parser.c  blxGff3Parser.h  blxGff3Parser_.h  blxdotter.c  blxdotter.h  blxmain.c  blxmsp.c  blxmsp.h  blxparser.c  blxparser.h  blxselect.c  blxview.c  blxview.h  blxviewMainWindow.c  blxviewMainWindow.h  blxwindow.c  blxwindow.h  dbidx.c  detailview.c  detailview.h  detailviewtree.c  detailviewtree.h  diskdump.c  diskfix.c  dotplot.c  dotter.c  dotter.h  dotterKarlin.c  (+20 more)
src/: .gitignore  AUTHORS  COPYING  COPYRIGHT_RANGE_OF_YEARS  ChangeLog  INSTALL  INSTALL.DEVELOPER  INSTALL.VM  INSTALL.linux  INSTALL.mac  INSTALL.windows  Makefile.am  Makefile.am.common  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  runconfig.sh  version.m4
src/autom4te.cache/: output.1  requests  traces.0  traces.1
src/belvuApp/: Makefile.am  Makefile.in  belvu.c  belvu.cpp  belvuAlignment.c  belvuAlignment.cpp  belvuAlignment.h  belvuAlignment.hpp  belvuConsPlot.c  belvuConsPlot.cpp  belvuConsPlot.h  belvuConsPlot.hpp  belvuMain.c  belvuMain.cpp  belvuOld.c  belvuTree.c  belvuTree.cpp  belvuTree.h  belvuTree.hpp  belvuWindow.c  belvuWindow.cpp  belvuWindow.h  belvuWindow.hpp  belvu_.h  belvu_.hpp
src/blixemApp/: Makefile.am  Makefile.in  bigpicture.c  bigpicture.cpp  bigpicture.h  bigpicture.hpp  bigpicturegrid.c  bigpicturegrid.cpp  bigpicturegrid.h  bigpicturegrid.hpp  blixem_.h  blixem_.hpp  blxFetch.c  blxFetch.cpp  blxFetchDb.c  blxFetchDb.cpp  blxcontext.cpp  blxcontext.hpp  blxdotter.c  blxdotter.cpp  blxdotter.h  blxdotter.hpp  blxmain.c  blxmain.cpp  blxpanel.cpp  blxpanel.hpp  blxview.c  blxview.cpp  blxview.h  blxview.hpp  blxwindow.c  blxwindow.cpp  blxwindow.h  blxwindow.hpp  coverageview.c  coverageview.cpp  coverageview.h  coverageview.hpp  detailview.c  detailview.cpp  (+15 more)
src/doc/: Makefile.am  Makefile.in  index.html
src/doc/Design_notes/: Makefile.am  Makefile.in  architecture.html  build.html  index.html  specs.html  testing.ods  todo.html
src/doc/Design_notes/modules/: Makefile.am  Makefile.in  belvuApp.html  blixemApp.html  dotterApp.html  libpfetch.html  seqtoolsUtils.html
src/doc/Design_notes/tests/: README
src/doc/Design_notes/tests/command_line/: test10_results  test11_results  test12  test14  test15_results  test16  test16_results  test17  test17_results  test1_results  test20_results  test22  test22_results  test26_results  test27  test27_results  test28  test29  test29_results  test3  test30  test30_results  test31  test31_results  test33_results  test34_results  test36  test36_results  test38_results  test4  test41_results  test42_results  test43_results  test44  test44_results  test45_results  test46  test46_results  test47  test47_results  (+8 more)
src/doc/Design_notes/tests/data/: ALIGN.fasta  PF02171_full.selex  PF02171_full.stock  PF02171_seed.fasta  PF02171_seed.stock  cgph_pale.color  markup2.color  markup_content.selex  markup_headers.selex
src/doc/Design_notes/tests/gui/: test1  test2  test3
src/doc/Publications/bmc_paper/: cover_letter.txt  seqtools.bib  seqtools.tex
src/doc/User_doc/: Belvu_manual.odt  Blixem_manual.odt  Dotter_manual.odt  Makefile.am  Makefile.in  belvu_news.html  belvu_quick_start.html  belvu_usage.txt  blixem_news.html  blixem_quick_start.html  blixem_usage.html  blixem_usage.txt  dotter_news.html  dotter_quick_start.html  dotter_usage.html  dotter_usage.txt  index.html  manuals.html  news.html  release_notes.html  todo.html
src/doc/User_doc/Belvu_manual/: Belvu_manual.tex
src/doc/User_doc/Blixem_manual/: Blixem_manual.tex
src/doc/User_doc/Dotter_manual/: Dotter_manual.tex
src/dotterApp/: Makefile.am  Makefile.in  alignmenttool.c  alignmenttool.cpp  dotplot.c  dotplot.cpp  dotter.c  dotter.cpp  dotter.h  dotter.hpp  dotterKarlin.c  dotterKarlin.cpp  dotterMain.c  dotterMain.cpp  dotterWindow  dotter_.h  dotter_.hpp  greyramptool.c  greyramptool.cpp  seqtoolsExonView.c  seqtoolsExonView.cpp  seqtoolsExonView.h  seqtoolsExonView.hpp
src/examples/: DA730641.fasta  Makefile.am  Makefile.in  PF02171_seed.stock  Q9H8G1.fasta  README  chr4_dna_align.gff  chr4_protein_align.gff  chr4_ref_seq.fasta  chr4_ref_seq_short.fasta  chr4_translation_frame1.fasta
src/gbtools/: .gitignore  README  README_SEQTOOLS
src/libpfetch/: Makefile.am  libcurlobject.c  libcurlobject.h  libcurlobject_I.h  libpfetch-cmarshal.c  libpfetch-cmarshal.cpp  libpfetch-cmarshal.h  libpfetch-utils.cpp  libpfetch.c  libpfetch.h  libpfetch_I.h  libpfetch_I.hpp  libpfetch_P.h
src/seqtoolsUtils/: Makefile.am  Makefile.in  blxGff3Parser.c  blxGff3Parser.cpp  blxGff3Parser.h  blxGff3Parser.hpp  blxmsp.c  blxmsp.cpp  blxmsp.h  blxmsp.hpp  blxparser.c  blxparser.cpp  blxparser.h  blxparser.hpp  iupac.h  iupac.hpp  seqtoolsFetch.cpp  seqtoolsFetch.hpp  seqtoolsWebBrowser.c  seqtoolsWebBrowser.cpp  translate.c  translate.cpp  utilities.c  utilities.cpp  utilities.h  utilities.hpp  version.h  version.hpp
src/test/: Makefile.am  Makefile.in  README  test_plan.ods
src/test/data/: ALIGN.selex  DA730641.fasta  Makefile.am  Makefile.in  PF02171_seed.msf  PF02171_seed.scores  PF02171_seed.segs  PF02171_seed.selex  PF02171_seed_segs.stock  PF02171_seed_separator.stock  Q9H8G1.fasta  cgph_pale2.color  chr4_dna_align.gff  chr4_protein_align.gff  chr4_ref_seq.fasta  chr4_ref_seq_short.fasta  chr4_translation_frame1.fasta  chr4_vs_DA730641.dot  chr4_vs_chr4.dot  markup.color
src/test/scripts/: Makefile.am  Makefile.in
src/test/scripts/automated/: Makefile.am  Makefile.in
src/test/scripts/automated/belvu/: Makefile.am  Makefile.in  test1  test10  test11  test12  test12_results  test13  test13_results  test14  test14_results  test15  test16  test17  test18  test18_results  test19  test1_results  test2  test20  test21  test21_results  test22  test23  test23_results  test24  test24_results  test25  test25_results  test26  test27  (+47 more)
src/test/scripts/manual/: Makefile.am  Makefile.in
(+52 files in other folders)
