
SUBDIRS = .

EXTRA_DIST = \
DA730641.fasta \
PF02171_seed.stock \
Q9H8G1.fasta \
README \
chr4_dna_align.gff \
chr4_protein_align.gff \
chr4_ref_seq.fasta \
chr4_ref_seq_short.fasta \
chr4_translation_frame1.fasta

# Extra files to remove for the maintainer-clean target.
#
MAINTAINERCLEANFILES = $(top_srcdir)/examples/Makefile.in
