
# include user-documentation in the installation
dist_doc_DATA = index.html blixem_quick_start.html dotter_quick_start.html blixem_usage.html dotter_usage.html Blixem_manual.pdf Dotter_manual.pdf

# these are included in the dist but not in the installation
EXTRA_DIST = manuals.html Blixem_manual.odt Dotter_manual.odt
