
# include user-documentation in the installation
dist_doc_DATA = todo.html \
                belvu_quick_start.html blixem_quick_start.html dotter_quick_start.html \
                belvu_usage.txt blixem_usage.txt dotter_usage.txt \
                belvu_news.html blixem_news.html dotter_news.html \
                Blixem_manual.pdf Dotter_manual.pdf

# these are included in the dist but not in the installation
EXTRA_DIST = index.html manuals.html Blixem_manual.odt Dotter_manual.odt
