
SUBDIRS = .

# these will be installed alongside the programs
dist_doc_DATA = todo.html \
release_notes.html \
belvu_quick_start.html \
blixem_quick_start.html \
dotter_quick_start.html \
belvu_usage.txt \
blixem_usage.txt \
dotter_usage.txt \
Blixem_manual/Blixem_manual.pdf \
Dotter_manual/Dotter_manual.pdf \
Belvu_manual/Belvu_manual.pdf

# these are included in the distribution, but are not installed
EXTRA_DIST = index.html manuals.html

# Extra files to remove for the maintainer-clean target.
#
MAINTAINERCLEANFILES = $(top_srcdir)/doc/User_doc/Makefile.in
