
SUBDIRS = .

EXTRA_DIST = \
ALIGN.fasta \
ALIGN.selex \
DA730641.fasta \
PF02171_full.selex \
PF02171_full.stock \
PF02171_seed.fasta \
PF02171_seed.msf \
PF02171_seed.scores \
PF02171_seed.segs \
PF02171_seed.selex \
PF02171_seed.stock \
PF02171_seed_segs.stock \
PF02171_seed_separator.stock \
Q9H8G1.fasta \
cgph_pale.color \
cgph_pale2.color \
chr4_dna_align.gff \
chr4_protein_align.gff \
chr4_ref_seq.fasta \
chr4_ref_seq_short.fasta \
chr4_translation_frame1.fasta \
chr4_vs_DA730641.dot \
chr4_vs_chr4.dot \
markup.color \
markup2.color \
markup_content.selex \
markup_headers.selex

# Extra files to remove for the maintainer-clean target.
#
MAINTAINERCLEANFILES = $(top_srcdir)/test/data/Makefile.in
