
SUBDIRS = .

EXTRA_DIST = \
test1 \
test10 \
test10_results \
test11 \
test11_results \
test12 \
test12_results \
test13 \
test13_results \
test14 \
test14_results \
test15 \
test15_results \
test16 \
test16_results \
test17 \
test17_results \
test18 \
test18_results \
test19 \
test19_results \
test1_results \
test2 \
test20 \
test20_results \
test21 \
test21_results \
test22 \
test22_results \
test23 \
test23_results \
test24 \
test24_results \
test25 \
test25_results \
test26 \
test26_results \
test27 \
test27_results \
test28 \
test28_results \
test29 \
test29_results \
test2_results \
test3 \
test30 \
test30_results \
test31 \
test31_results \
test32 \
test32_results \
test33 \
test33_results \
test34 \
test34_results \
test35 \
test35_results \
test36 \
test36_results \
test36_results_old \
test37 \
test37_results \
test38 \
test38_results \
test39 \
test39_results \
test3_results \
test4 \
test40 \
test40_results \
test41 \
test41_results \
test42 \
test42_results \
test43 \
test43_results \
test44 \
test44_results \
test45 \
test45_results \
test46 \
test46_results \
test47 \
test47_results \
test48 \
test48_results \
test49 \
test49_results \
test4_results \
test5 \
test50 \
test50_results \
test51 \
test51_results \
test5_results \
test6 \
test6_results \
test7 \
test7_results \
test8 \
test8_results \
test9 \
test9_results

# Extra files to remove for the maintainer-clean target.
#
MAINTAINERCLEANFILES = $(top_srcdir)/test/scripts/automated/belvu/Makefile.in
